# railway-test

./: .gitignore  README.md  package.json  railway.json  turbo.json
.github/workflows/: build-backend.yml  build-frontend.yml  ci.yml
apps/backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
apps/backend/migrations/: 001_initial_schema.sql
apps/backend/src/: broadcaster.rs  cache.rs  db.rs  lib.rs  main.rs  models.rs
apps/backend/src/routes/: events.rs  mod.rs  participants.rs  sse.rs
apps/backend/tests/: api_tests.rs
apps/frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  package.json  tsconfig.json  vite.config.ts
apps/frontend/app/: client.tsx  routeTree.gen.ts  router.tsx  ssr.tsx
apps/frontend/app/lib/: api-client.ts  queries.ts  sse-client.ts  use-event-sse.ts
apps/frontend/app/routes/: __root.tsx  index.tsx
apps/frontend/app/routes/events/: $id.tsx
apps/frontend/src/: client.d.ts  routeTree.gen.ts  router.tsx
apps/frontend/src/lib/: api-client.ts  queries.ts  types.ts
apps/frontend/src/routes/: __root.tsx
apps/frontend/src/routes/events/: $id.tsx
